tests/invalid/not-expected-chars.cipl
int main() {
    $$this->:assa

    @prop           @err_in_col_22
    #col

    ## comment?

            $ // tabs != spaces??
}